[CLOUDTRUST-6789] Migrate to keycloak tests framework